# beat_sequencer

./: .gitignore  .gitmodules  README.md
code/: CMakeLists.txt
code/lib/: CMakeLists.txt
code/src/: buttons.c  buttons.h  leds.c  leds.h  main.c  pins.h  tusb_config.h  usb_descriptor.c
hardware/: beat_sequencer.kicad_pcb  beat_sequencer.kicad_prl  beat_sequencer.kicad_pro  beat_sequencer.kicad_sch  key_matrix.kicad_sch
hardware_choc/: beat_sequencer_choc.kicad_prl  beat_sequencer_choc.kicad_pro  beat_sequencer_choc.kicad_sch  fp-info-cache  fp-lib-table  key_matrix.kicad_sch
hardware_choc/Custom_FP.pretty/: SW_PG1350.kicad_mod
hardware_mx/: beat_sequencer.kicad_prl  fp-info-cache  leds.kicad_sch
